--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "string": "c",
         "string_view": "c",
         "string.h": "c",
-        "debug.h": "c"
+        "debug.h": "c",
+        "chrono": "c",
+        "variant": "c"
     }
 }
