修复makefile链接顺序出错导致的运行失败,makefile增加rebuild功能,修复中断描述符未设置dcount值的bug，修复interrupt_entry_table中中断处理程序地址计算错误的bug，修复中断错误码编写错误的bug

--- a/kernel/makefile
+++ b/kernel/makefile
@@ -5,6 +5,8 @@ SRCS := $(shell find $(SRC_DIRS)  -name '*.c' -or -name '*.asm')
 OBJS := $(SRCS:%=$(BUILD_DIR)/%.o)
 DEPS := $(OBJS:.o=.d)
 
+MAIN_OBJ := $(filter %main.c.o,$(OBJS))
+LD_OBJS := $(filter-out $(MAIN_OBJ),$(OBJS))
 
 ENTRY_POINT = 0xc0001500
 # -c 只编译不链接，否则报错，-fno-builtin不适用c语言内置函数
@@ -25,6 +27,6 @@ $(BUILD_DIR)/%.asm.o: %.asm
 	$(AS) $(ASFLAGS) -o $@ $<
 
 $(BUILD_DIR)/kernel.bin: $(OBJS)
-	$(LD) $(LDFLAGS) $^ -o $@
+	$(LD) $(LDFLAGS) $(MAIN_OBJ) $(LD_OBJS) -o $@
 
 -include $(DEPS)
