--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
         "chrono": "c",
         "variant": "c",
         "memory.h": "c",
-        "random": "c"
+        "random": "c",
+        "list": "c",
+        "functional": "c"
     }
 }
