调整头文件

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "memory.h": "c",
         "random": "c",
         "list": "c",
-        "functional": "c"
+        "functional": "c",
+        "stdint.h": "c"
     }
 }
