--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,18 @@
 {
+  "name" : "minios",
   "customizations": {
     // Configure properties specific to VS Code.
     "vscode": {
       // Set *default* container specific settings.json values on container create.
       "settings": {},
-      "extensions": ["MS-CEINTL.vscode-language-pack-zh-hans",]
+      "extensions": ["MS-CEINTL.vscode-language-pack-zh-hans"]
     }
   },
   "features": {
     "ghcr.io/devcontainers/features/desktop-lite:1": {
       "version": "latest"
     }
-  }
+	},
+  "forwardPorts": [6080]
+
 }
